# xiao-esp32c6-blinky

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: grove_4digit_display.rs  grove_accelerometer.rs  grove_air_pressure.rs  grove_button.rs  grove_buzzer.rs  grove_led.rs  grove_light_sensor.rs  grove_oled.rs  grove_potentiometer.rs  grove_rgb_stick.rs  grove_sound_sensor.rs  grove_temp_humidity.rs
src/: main.rs
