[package]
name = "xiao-esp32c6-blinky"
version = "0.2.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>", "Patrik  Husfloen <redoz@redoz.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32c6", "uart", "colors", "critical-section"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
